--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ function MM_swapImage() { //v3.0
             	<h1></h1>
             		<div>
                     	<p>Teléfono celular </p>
-                    	<p><img src="imagenes/1.jpg"></p>
+                    	<p><img src="imagenes/1.jpg" width="25%"></p>
                         <br>
                     </div>                    
             </div>   
@@ -130,7 +130,7 @@ function MM_swapImage() { //v3.0
             	<h1></h1>
             		<div>
                     	<p>Tamaño</p>
-                    	<p><img src="imagenes/2.jpg"></p>
+                    	<p><img src="imagenes/2.jpg" width="25%"></p>
                         <br>
                     </div>                    
             </div>
@@ -141,7 +141,7 @@ function MM_swapImage() { //v3.0
             	<h1></h1>
             		<div>
                     	<p>Funcionalidad del Teléfono celular</p>
-                    	<p><img src="imagenes/3.jpg"></p>
+                    	<p><img src="imagenes/3.jpg" width="25%"></p>
                         <br>
                     </div>                    
             </div>  
@@ -172,7 +172,7 @@ En aquellos primeros tiempos, eran utilizadas las bandas de HF y VHF, con el fin
             	<h1></h1>
             		<div>
                     	<p>Pionero en los Teléfonos celulares</p>
-                    	<p><img src="imagenes/4.jpg"></p>
+                    	<p><img src="imagenes/4.jpg" width="25%"></p>
                         <br>
                     </div>                    
             </div>   
@@ -185,7 +185,7 @@ A pesar de su escasa popularidad, estos equipos se mantuvieron vigentes durante 
             	<h1></h1>
             		<div>
                     	<p>Teléfono de Auto</p>
-                    	<p><img src="imagenes/5.jpg"></p>
+                    	<p><img src="imagenes/5.jpg" width="25%"></p>
                         <br>
                     </div>                    
             </div>
@@ -198,7 +198,7 @@ No obstante, su punto más significativo fue sin lugar a dudas el paso hacia la 
             	<h1></h1>
             		<div>
                     	<p>Evolución del Teléfono celular</p>
-                    	<p><img src="imagenes/6.jpg"></p>
+                    	<p><img src="imagenes/6.jpg" width="40%"></p>
                         <br>
                     </div>                    
             </div>  
@@ -225,7 +225,7 @@ No obstante, su punto más significativo fue sin lugar a dudas el paso hacia la 
             	<h1></h1>
             		<div>
                     	<p>Xiaomi Redmi Pro</p>
-                    	<p><img src="imagenes/7.jpg"></p>
+                    	<p><img src="imagenes/7.jpg" width="25%"></p>
                         <br>
                     </div>                    
             </div>   
@@ -236,7 +236,7 @@ No obstante, su punto más significativo fue sin lugar a dudas el paso hacia la 
             	<h1></h1>
             		<div>
                     	<p>Motorola G4 PLUS</p>
-                    	<p><img src="imagenes/8.jpg"></p>
+                    	<p><img src="imagenes/8.jpg" width="20%" height="40%"></p>
                         <br>
                     </div>                    
             </div>
@@ -247,7 +247,7 @@ No obstante, su punto más significativo fue sin lugar a dudas el paso hacia la 
             	<h1></h1>
             		<div>
                     	<p>Samsung Galaxy S8</p>
-                    	<p><img src="imagenes/9.jpg"></p>
+                    	<p><img src="imagenes/9.jpg" width="25%"></p>
                         <br>
                     </div>                    
             </div>  
@@ -274,7 +274,7 @@ No obstante, su punto más significativo fue sin lugar a dudas el paso hacia la 
             	<h1>TELCEL</h1>
             		<div>
                     	<p>Telcel es una marca propiedad de la empresa mexicana Radiomóvil DIPSA, S.A. de C.V.. Tiene presencia en todo México y se dedica a ofrecer servicios de telefonía móvil, telefonía fija, servicios de banda ancha, entre otros servicios. Es subsidiaria de la empresa mexicana América Móvil, (una filial de Grupo Carso), fundada en 1984, es la compañía celular en México más pooular. Actualmente ofrece cobertura en Telcel 3G (desde finales de 2007) y 4GLTE (desde 6 de noviembre de 2012)</p>
-                    	<p><a href="http://www.telcel.com/"><img src="imagenes/10.png"></a></p>
+                    	<p><!--<a href="http://www.telcel.com/">--><img src="imagenes/10.png" width="25%"></a></p>
                         <br>
                     </div>                    
             </div>   
@@ -282,7 +282,7 @@ No obstante, su punto más significativo fue sin lugar a dudas el paso hacia la 
             	<h1>MOVISTAR</h1>
             		<div>
                     	<p>Movistar es la marca comercial de la multinacional española de telecomunicaciones Telefónica en España e Hispanoamérica, desde el 3 de mayo de 2010, para sus productos de telefonía fija, móvil, internet y televisión.</p>
-						<p><a href="http://www.movistar.com.mx/"><img src="imagenes/11.jpg"></a></p>
+						<p><!--<a href="http://www.movistar.com.mx/">--><img src="imagenes/11.jpg" width="25%"></a></p>
                         <br>
                     </div>                    
             </div>
@@ -290,7 +290,7 @@ No obstante, su punto más significativo fue sin lugar a dudas el paso hacia la 
             	<h1>UNEFON</h1>
             		<div>
                     	<p>Unefón es una compañía mexicana de telefonía móvil propiedad de AT&T, la cual se dedica a ofrecer únicamente el esquema de cobro de prepago, fundada en 1998</p>
-						<p><a href="https://www.unefon.com.mx/"><img src="imagenes/12.png"></a></p>
+						<p><!--<a href="https://www.unefon.com.mx/">--><img src="imagenes/12.png" width="25%"></a></p>
                         <br>
                     </div>                    
             </div>  
@@ -298,7 +298,7 @@ No obstante, su punto más significativo fue sin lugar a dudas el paso hacia la 
             	<h1>AT&T</h1>
             		<div>
                     	<p>AT&T México es una empresa mexicana de telecomunicaciones, subsidiaria de la empresa estadounidense AT&T, cuya sede se encuentra en la Ciudad de México, recientemente fundada en 2015 (en México)</p>
-                    	<p><a href="https://www.att.com.mx/"><img src="imagenes/13.png"></a></p>
+                    	<p><!--<a href="https://www.att.com.mx/">--><img src="imagenes/13.png" width="30%" height="35%"></a></p>
                         <br>
                     </div>                    
             </div>  
