--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ function MM_swapImage() { //v3.0
             	<h1>Iphone 7</h1>
             		<div>
                     	<p>Este es el nuevo Iphone 7</p>
-                    	<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image4','','imagenes/iphone2.png',1)"><img src="imagenes/iphone1.png" width="468" height="600" id="Image4"></a></p>
+                    	<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image4','','imagenes/iphone2.png',1)"><img src="imagenes/iphone1.png" width="40%"id="Image4"></a></p>
                         <br>
                     </div>
  					<div></div>                       
@@ -62,7 +62,7 @@ function MM_swapImage() { //v3.0
             	<h1>Google Pixel</h1>
             		<div>
                     	<p>Este es el nuevo Google Pixel</p>
-                    	<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image5','','imagenes/g2.png',1)"><img src="imagenes/g1.png" width="500" height="550" id="Image5"></a></p>
+                    	<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image5','','imagenes/g2.png',1)"><img src="imagenes/g1.png" width="40%" id="Image5"></a></p>
                         <br>
                     </div>
  					<div></div>                       
@@ -119,7 +119,7 @@ function MM_swapImage() { //v3.0
             	<h1></h1>
             		<div>
                     	<p>Teléfono celular </p>
-                    	<p><img src="imagenes/1.jpg" width="25%"></p>
+                    	<p><img src="imagenes/1.jpg" width="35%"></p>
                         <br>
                     </div>                    
             </div>   
@@ -130,7 +130,7 @@ function MM_swapImage() { //v3.0
             	<h1></h1>
             		<div>
                     	<p>Tamaño</p>
-                    	<p><img src="imagenes/2.jpg" width="25%"></p>
+                    	<p><img src="imagenes/2.jpg" width="35%"></p>
                         <br>
                     </div>                    
             </div>
@@ -141,7 +141,7 @@ function MM_swapImage() { //v3.0
             	<h1></h1>
             		<div>
                     	<p>Funcionalidad del Teléfono celular</p>
-                    	<p><img src="imagenes/3.jpg" width="25%"></p>
+                    	<p><img src="imagenes/3.jpg" width="35%"></p>
                         <br>
                     </div>                    
             </div>  
@@ -172,7 +172,7 @@ En aquellos primeros tiempos, eran utilizadas las bandas de HF y VHF, con el fin
             	<h1></h1>
             		<div>
                     	<p>Pionero en los Teléfonos celulares</p>
-                    	<p><img src="imagenes/4.jpg" width="25%"></p>
+                    	<p><img src="imagenes/4.jpg" width="35%"></p>
                         <br>
                     </div>                    
             </div>   
@@ -185,7 +185,7 @@ A pesar de su escasa popularidad, estos equipos se mantuvieron vigentes durante 
             	<h1></h1>
             		<div>
                     	<p>Teléfono de Auto</p>
-                    	<p><img src="imagenes/5.jpg" width="25%"></p>
+                    	<p><img src="imagenes/5.jpg" width="36%"></p>
                         <br>
                     </div>                    
             </div>
@@ -225,7 +225,7 @@ No obstante, su punto más significativo fue sin lugar a dudas el paso hacia la 
             	<h1></h1>
             		<div>
                     	<p>Xiaomi Redmi Pro</p>
-                    	<p><img src="imagenes/7.jpg" width="25%"></p>
+                    	<p><img src="imagenes/7.jpg" width="35%"></p>
                         <br>
                     </div>                    
             </div>   
@@ -236,7 +236,7 @@ No obstante, su punto más significativo fue sin lugar a dudas el paso hacia la 
             	<h1></h1>
             		<div>
                     	<p>Motorola G4 PLUS</p>
-                    	<p><img src="imagenes/8.jpg" width="20%" height="40%"></p>
+                    	<p><img src="imagenes/8.jpg" width="33%"></p>
                         <br>
                     </div>                    
             </div>
@@ -247,7 +247,7 @@ No obstante, su punto más significativo fue sin lugar a dudas el paso hacia la 
             	<h1></h1>
             		<div>
                     	<p>Samsung Galaxy S8</p>
-                    	<p><img src="imagenes/9.jpg" width="25%"></p>
+                    	<p><img src="imagenes/9.jpg" width="37%"></p>
                         <br>
                     </div>                    
             </div>  
