--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ function MM_swapImage() { //v3.0
 <body onLoad="MM_preloadImages('imagenes/iphone2.png','imagenes/g2.png')">
 
 	<div data-role="page" id="Principal" data-theme="a">
-    	<div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
+    	
+        <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
         	<h1>Telefonía Celular</h1>
 		</div>
         <div data-role="main" class="ui-content">
@@ -312,7 +313,7 @@ No obstante, su punto más significativo fue sin lugar a dudas el paso hacia la 
             	<h1>TELCEL</h1>
             		<div>
                     	<p>Telcel es una marca propiedad de la empresa mexicana Radiomóvil DIPSA, S.A. de C.V.. Tiene presencia en todo México y se dedica a ofrecer servicios de telefonía móvil, telefonía fija, servicios de banda ancha, entre otros servicios. Es subsidiaria de la empresa mexicana América Móvil, (una filial de Grupo Carso), fundada en 1984, es la compañía celular en México más pooular. Actualmente ofrece cobertura en Telcel 3G (desde finales de 2007) y 4GLTE (desde 6 de noviembre de 2012)</p>
-                    	<p><!--<a href="http://www.telcel.com/">--><img src="imagenes/10.png" width="25%"></a></p>
+                    	<p><a href="http://www.telcel.com/" target="_self"><img src="imagenes/10.png" width="25%"></a></p>
                         <br>
                     </div>                    
             </div>   
@@ -320,7 +321,7 @@ No obstante, su punto más significativo fue sin lugar a dudas el paso hacia la 
             	<h1>MOVISTAR</h1>
             		<div>
                     	<p>Movistar es la marca comercial de la multinacional española de telecomunicaciones Telefónica en España e Hispanoamérica, desde el 3 de mayo de 2010, para sus productos de telefonía fija, móvil, internet y televisión.</p>
-						<p><!--<a href="http://www.movistar.com.mx/">--><img src="imagenes/11.jpg" width="25%"></a></p>
+						<p><a href="http://www.movistar.com.mx/" target="_self"><img src="imagenes/11.jpg" width="25%"></a></p>
                         <br>
                     </div>                    
             </div>
@@ -328,7 +329,7 @@ No obstante, su punto más significativo fue sin lugar a dudas el paso hacia la 
             	<h1>UNEFON</h1>
             		<div>
                     	<p>Unefón es una compañía mexicana de telefonía móvil propiedad de AT&T, la cual se dedica a ofrecer únicamente el esquema de cobro de prepago, fundada en 1998</p>
-						<p><!--<a href="https://www.unefon.com.mx/">--><img src="imagenes/12.png" width="25%"></a></p>
+						<p><a href="https://www.unefon.com.mx/" target="_self"><img src="imagenes/12.png" width="25%"></a></p>
                         <br>
                     </div>                    
             </div>  
@@ -336,7 +337,7 @@ No obstante, su punto más significativo fue sin lugar a dudas el paso hacia la 
             	<h1>AT&T</h1>
             		<div>
                     	<p>AT&T México es una empresa mexicana de telecomunicaciones, subsidiaria de la empresa estadounidense AT&T, cuya sede se encuentra en la Ciudad de México, recientemente fundada en 2015 (en México)</p>
-                    	<p><!--<a href="https://www.att.com.mx/">--><img src="imagenes/13.png" width="45%" height="35%"></a></p>
+                    	<p><a href="https://www.att.com.mx/" target="_self"><img src="imagenes/13.png" width="45%" height="35%"></a></p>
                         <br>
                     </div>                    
             </div>  
